updated bash in first run and readme